fixed button text wrapping

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,31 +1,31 @@
+
+
+
 .tabButton {
   width: 100%;
   max-width: 290px;
-	border-radius:5px;
-  margin-top:8px;
-  box-shadow:inset 0px 1px 3px 0px #91b8b3;
-	background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
-	background-color:#768d87;
-	border-radius:5px;
-	border:1px solid #566963;
+  max-height: 20px;
+  white-space: nowrap;
+	background-color:#c4c4c4;
+	border-radius:50px;
+	border:1px solid #000000;
 	display:inline-block;
 	cursor:pointer;
-	color:#ffffff;
+	color:#030303;
+	font-family:Arial;
 	font-size:8px;
-	font-weight:bold;
-	padding:9px 20px;
-	text-decoration:none;
-	text-shadow:0px -1px 0px #2b665e;
-
+	padding:7px 25px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .tabButton:hover {
-  background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
-	background-color:#6c7c7c;
+	background-color:#d9d9d9;
 }
 .tabButton:active {
 	position:relative;
 	top:1px;
 }
+
 
 ul{
   list-style-type: none;
@@ -54,6 +54,14 @@ ul{
   width:  25px;
   height: 25px;
 }
+
+
+
+
+
+
+
+/*stuff from PostCSS
 /* @import url('https://fonts.googleapis.com/css?family=Raleway:400,700,900'); */
 
 
@@ -71,7 +79,7 @@ ul{
 
 
 .search__input {
-        width: 50%;
+        width: 70%;
         padding: 12px 24px;
 
         background-color: transparent;
@@ -82,7 +90,7 @@ ul{
         color: #575756;
         background-color: transparent;
 
-      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
         background-repeat: no-repeat;
         background-size: 18px 18px;
         background-position: 95% center;
